ArC: implement @Reserve beans